testdata/step/corrupted.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata
  name: corrupted-test-step
spec:
  operations:
  - apply:
      - fileRef:
        file: corrupted-apply.yaml
    assert:
      - fileRef:
        file: corrupted-assert.yaml
