testdata/step/ok.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  name: test-1
spec:
  try: 
  - apply:
      file: foo.yaml
  - assert:
      file: bar.yaml
