testdata/step/raw-resource.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  name: test
spec:
  try: 
  - apply:
      resource:
        apiVersion: v1
        kind: ConfigMap
        metadata:
          name: chainsaw-quick-start
        data:
          foo: bar
  - create:
      resource:
        apiVersion: v1
        kind: ConfigMap
        metadata:
          name: chainsaw-quick-start
        data:
          foo: bar
