testdata/step/unsupported-kind.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: UnsupportedKind
metadata:
  name: test-unsupported
spec:
  someField: value
