testdata/step/valid-test-step.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  name: test-sample
spec:
  operations:
    - apply:
        - fileRef:
            file: sample-apply.yaml
      assert:
        - fileRef:
            file: sample-assert.yaml
