testdata/step/with-catch.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  name: test
spec:
  try: 
  - apply:
      file: foo.yaml
  - assert:
      file: bar.yaml
  catch:
  - podLogs:
      namespace: foo
  - events:
      namespace: foo
  - command:
      entrypoint: time
  - script:
      content: echo "hello"
